fix: fixed calc in albums (gap)

--- a/day-2/md.css
+++ b/day-2/md.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 768px){
     /********** main **********/
     .album{
-        width: calc((100% - 50px) / 4);
+        width: calc((100% - 30px) / 4);
         /* background-color: yellow; */
     }
 }
