--- a/day-2/xs.css
+++ b/day-2/xs.css
@@ -169,7 +169,7 @@ nav  div{
 }
 
 .album{
-    width: calc((100% - 50px) / 2);
+    width: calc((100% - 10px) / 2);
     /* background-color: yellow; */
 }
 
